--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "angular2-quickstart",
-  "version": "1.0.0",
-  "description": "QuickStart package.json from the documentation, supplemented with testing support",
+  "name": "project_cado",
+  "version": "0.0.1",
+  "description": "Testing Angular 2 Router",
   "scripts": {
     "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
-    "docker-build": "docker build -t ng2-quickstart .",
-    "docker": "npm run docker-build && docker run -it --rm -p 3000:3000 -p 3001:3001 ng2-quickstart",
+    "docker-build": "docker build -t cado .",
+    "docker": "npm run docker-build && docker run -it --rm -p 3000:3000 -p 3001:3001 cado",
     "pree2e": "npm run webdriver:update",
     "e2e": "tsc && concurrently \"http-server\" \"protractor protractor.config.js\"",
     "lint": "tslint ./app/**/*.ts -t verbose",
